hphp/test/zend7/Zend/tests/bug42818.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sbug42818.php on line 2